internal/pascalallen/infrastructure/etc/k8s/go/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go
spec:
  replicas: 3
  selector:
    matchLabels:
      name: go
  template:
    metadata:
      labels:
        name: go
    spec:
      containers:
        - name: pascalallen-go
          image: pascalallen/pascalallen-go:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9990
          readinessProbe:
            tcpSocket:
              port: 9990
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9990
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
