internal/pascalallen/infrastructure/etc/k8s/go/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9990
  selector:
    name: go
