internal/pascalallen/infrastructure/etc/k8s/go/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pascalallen
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pascalallen.com
      secretName: pascalallen-tls
  rules:
    - host: pascalallen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go
                port:
                  number: 80
